--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -2,18 +2,25 @@ xpra (5.0.5-1) UNRELEASED; urgency=low
   * Major:
    - race condition in OpenGL initialization
    - http socket upgrades for slow requests
+   - socket setup failure cleanup
+   - ensure text is always lossless
    - fixup DPI backport for Xvfb users
    - window max-height nor honoured
    - tools and examples hang on SIGINT
+   - start-gui error when specifying a port
+   - broken about dialog, also with shadow servers
+   - missing shadow server system tray
    - workaround missing icon size config
-   - broken about dialog
    - workaround paramiko error with agent keys
    - incomplete desktop server startup with `Xvfb` backend
   * Platforms and packaging:
+   - appindicator system tray not shown
    - (Free)BSD compatibility: don't build pam, do build drm
+   - don't expand environment variables in config files
    - MS Windows console title was not set
    - close log files to avoid warnings on MS Windows
    - only build CUDA kernels if needed
+   - allow building CUDA kernels with clang
    - RHEL8 pycuda 2022.1 patch for compatibility with CUDA 12.x
    - use the correct enum type for nvfbc constants
    - pycuda 2024.1
@@ -24,16 +31,22 @@ xpra (5.0.5-1) UNRELEASED; urgency=low
     - honour client specified order of clipboard preferred targets
     - allow `text/html` as `text` target
   * Minor:
+    - ensure each socket gets its own options object
+    - correctly set XImage buffers read-only
+    - cleanup errors with RFB connections
+    - close file descriptors of pinentry subprocess
     - don't wrap our own exceptions twice
+    - don't try to print a size we don't have
     - support multiple attributes with `bind` options
     - make iconify delay configurable
     - update trixie and sid libavif dependency
     - simplify regex syntax
     - pillow unit test failure with versions >= 10
     - documentation dead links
+    - don't import X11 modules under Wayland
     - deprecation warnings: ssl constants, re.sub
 
- -- Antoine Martin <antoine@xpra.org>  Sun, 21 Jan 2024 14:42:42 +0700
+ -- Antoine Martin <antoine@xpra.org>  Wed, 31 Jan 2024 18:52:05 +0700
 
 xpra (5.0.4-1) UNRELEASED; urgency=low
   * Major:
