--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -3,7 +3,7 @@ xpra (5.0.5-1) UNRELEASED; urgency=low
    - race condition in OpenGL initialization
    - http socket upgrades for slow requests
    - window state attributes wrongly set to False
-   - window geometry not updated
+   - window geometry not updated, not restored
    - handle pointer events missing the shadow window id more gracefully
    - socket setup failure cleanup
    - ensure text is always lossless
@@ -16,6 +16,7 @@ xpra (5.0.5-1) UNRELEASED; urgency=low
    - workaround missing icon size config
    - workaround paramiko error with agent keys
    - incomplete desktop server startup with `Xvfb` backend
+   - packet encoding error on client control command
   * Platforms and packaging:
    - appindicator system tray not shown
    - (Free)BSD compatibility: don't build pam, do build drm
@@ -35,6 +36,7 @@ xpra (5.0.5-1) UNRELEASED; urgency=low
     - honour client specified order of clipboard preferred targets
     - allow `text/html` as `text` target
   * Minor:
+    - restore chosen window size
     - ensure each socket gets its own options object
     - correctly set XImage buffers read-only
     - cleanup errors with RFB connections
@@ -51,7 +53,7 @@ xpra (5.0.5-1) UNRELEASED; urgency=low
     - deprecation warnings: ssl constants, re.sub
     - skip test failing on CI
 
- -- Antoine Martin <antoine@xpra.org>  Sat, 03 Feb 2024 22:02:27 +0700
+ -- Antoine Martin <antoine@xpra.org>  Mon, 05 Feb 2024 21:25:53 +0700
 
 xpra (5.0.4-1) UNRELEASED; urgency=low
   * Major:
