update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,7 +1,32 @@
 xpra (5.0.6-1) UNRELEASED; urgency=low
-  * TODO
+  * Major:
+   - windows misplaced on screen, moving unexpectedly
+   - windows wm-state synchronization issue
+   - lossy text due to downscaling
+   - X11 properties clash
+   - try harder to handle unexpected clipboard data formats
+   - `run_scaled` and `attach=yes` errors in virtual envs
+  * Platforms and packaging:
+   - updated service file for DEB packages
+   - remove duplicated systemd service and socket files in DEB packages
+   - enable OpenGL with Intel drivers
+  * Minor:
+   - OpenGL error due to numpy import race condition
+   - `start-child-late` cannot be used alone
+   - builtin ssh server connection errors when display is specified
+   - ssh upgrade errors when unavailable
+   - blacklist some more greedy clipboard applications
+   - pixel buffers we allocate are read-write
+  * Cosmetic:
+   - OpenGL probe error messages
+   - Cython3 warnings
+   - avoid mDNS errors, log message instead
+   - use the expected data type
+   - remove unused device context
+   - silence spurious messages sent by wine applications
+   - gst-plugin-scanner packaging for MacOS
 
- -- Antoine Martin <antoine@xpra.org>  Thu, 08 Feb 2024 21:03:56 +0700
+ -- Antoine Martin <antoine@xpra.org>  Tue, 19 Feb 2024 22:39:04 +0700
 
 xpra (5.0.5-1) UNRELEASED; urgency=low
   * Major:
