update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -9,9 +9,11 @@ xpra (5.0.6-1) UNRELEASED; urgency=low
    - try harder to handle unexpected clipboard data formats
    - `run_scaled` and `attach=yes` errors in virtual envs
   * Platforms and packaging:
+   - missing ffmpeg RPM dependencies and stricter submodule dependencies
    - updated service file for DEB packages
    - remove duplicated systemd service and socket files in DEB packages
    - enable OpenGL with Intel drivers
+   - add Ubuntu Noble
   * Minor:
    - OpenGL error due to numpy import race condition
    - `start-child-late` cannot be used alone
@@ -27,6 +29,7 @@ xpra (5.0.6-1) UNRELEASED; urgency=low
    - remove unused device context
    - silence spurious messages sent by wine applications
    - gst-plugin-scanner packaging for MacOS
+   - ffmpeg decoder error handler could fail during self tests
 
  -- Antoine Martin <antoine@xpra.org>  Tue, 20 Feb 2024 22:00:32 +0700
 
