update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,8 +1,23 @@
 xpra (5.0.7-1) UNRELEASED; urgency=low
-  * typo causing CUDA codecs error
-  * f-string incompatible with Python versions older than 3.8
+  * Regressions:
+   - typo causing CUDA codecs error
+   - window content-type guessing broken with Python < 3.8
+   - X11 clipboard backend broken with Python < 3.9
+  * Platforms and packaging:
+   - installation path for manual pages on FreeBSD
+   - comtypes clear cache script executable was moved
+   - missing RPM soft dependency
+  * Major bugs:
+   - missing feature flags
+   - client wrongly claiming file download is not available
+   - desktop geometry changes can't clamp windows to display area
+  * Minor and cosmetic bugs:
+   - don't try to query the Linux distributions on MacOS or MS Windows
+   - use namespaced capabilities check
+   - potential undesirable side-effects
+   - method signature consistency
 
- -- Antoine Martin <antoine@xpra.org>  Fri, 23 Feb 2024 19:03:20 +0700
+ -- Antoine Martin <antoine@xpra.org>  Wed, 28 Feb 2024 19:09:23 +0700
 
 xpra (5.0.6-1) UNRELEASED; urgency=low
   * Major:
