update the release notes

--- a/src/NEWS
+++ b/src/NEWS
@@ -1,4 +1,4 @@
-v3.1.7 (2024-02-20)
+v3.1.7 (2024-03-01)
 	-- major fixes:
 		- windows misplaced on screen, moving unexpectedly
 		- windows wm-state synchronization issue
@@ -27,6 +27,7 @@ v3.1.7 (2024-02-20)
 		- make it easier to build DEBs
 		- pycuda 2020.1 patch for compatibility between RHEL 8 and newer CUDA SDKs
 		- build CUDA kernels with clang
+		- missing `lsb_release` soft dependency in RPMs
 		- always build python rencode and python lz4 for RHEL 9
 		- newer libyuv snapshot
 		- install Cython via pip for DEB builds
@@ -43,7 +44,11 @@ v3.1.7 (2024-02-20)
 		- blacklist some more greedy clipboard applications
 		- rfb cleanup errors
 		- better rencode compatibility for XSettings
+		- codec self test error handler bug
 	-- cosmetic:
+		- notification errors during shutdown
+		- don't query 'linux_distribution' on MacOS or MS Windows
+		- avoid potential mmap checks side-effects
 		- avoid mDNS errors, log message instead
 		- Python 3.12 SyntaxWarning
 		- don't try to print a display size we don't have
