--- a/src/packaging/debian/xpra/changelog
+++ b/src/packaging/debian/xpra/changelog
@@ -27,6 +27,7 @@ xpra (3.1.7-1) UNRELEASED; urgency=low
    - make it easier to build DEBs
    - pycuda 2020.1 patch for compatibility between RHEL 8 and newer CUDA SDKs
    - build CUDA kernels with clang
+   - missing `lsb_release` soft dependency in RPMs
    - always build python rencode and python lz4 for RHEL 9
    - newer libyuv snapshot
    - install Cython via pip for DEB builds
@@ -43,14 +44,18 @@ xpra (3.1.7-1) UNRELEASED; urgency=low
    - blacklist some more greedy clipboard applications
    - rfb cleanup errors
    - better rencode compatibility for XSettings
+   - codec self test error handler bug
   * cosmetic:
+   - notification errors during shutdown
+   - don't query 'linux_distribution' on MacOS or MS Windows
+   - avoid potential mmap checks side-effects
    - avoid mDNS errors, log message instead
    - Python 3.12 SyntaxWarning
    - don't try to print a display size we don't have
    - gst-plugin-scanner packaging for MacOS
    - deprecation warnings
 
- -- Antoine Martin <antoine@nagafix.co.uk>  Tue, 20 Feb 2024 22:24:00 +0700
+ -- Antoine Martin <antoine@nagafix.co.uk>  Fri, 01 Mar 2024 19:16:57 +0700
 
 xpra (3.1.6-1) UNRELEASED; urgency=low
   * major fixes:
