--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (5.0.8-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Sat, 02 Mar 2024 23:47:49 +0700
+
 xpra (5.0.7-1) UNRELEASED; urgency=low
   * Regressions:
    - typo causing CUDA codecs error
