update the release notes

--- a/src/NEWS
+++ b/src/NEWS
@@ -1,4 +1,4 @@
-v3.1.7 (2024-03-01)
+v3.1.7 (2024-03-04)
 	-- major fixes:
 		- windows misplaced on screen, moving unexpectedly
 		- windows wm-state synchronization issue
@@ -12,6 +12,8 @@ v3.1.7 (2024-03-01)
 		- `run_scaled` and `attach=yes` errors in virtual envs
 		- XImage pixel buffers are read-only
 		- python buffers wrongly allowing writes
+		- use TLS ssl protocol constant if available
+		- client exit with password dialog (MS Windows and MacOS)
 	-- clipboard:
 		- honour client specified order of clipboard preferred targets
 		- try harder to handle unexpected clipboard data formats
@@ -54,6 +56,7 @@ v3.1.7 (2024-03-01)
 		- don't try to print a display size we don't have
 		- gst-plugin-scanner packaging for MacOS
 		- deprecation warnings
+		- consistency: accept more iterables
 
 v3.1.6 (2023-11-27)
 	-- major fixes:
