--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -5,6 +5,10 @@ xpra (5.0.8-1) UNRELEASED; urgency=low
    - force include all brotli dylibs in MacOS builds
    - spng encoder build switch not honoured
    - Cython 3.0.9
+   - include `pynvml` in MS Windows full builds
+   - force include `zeroconf` in MS Windows builds
+   - MS Windows builds not waiting for input to close
+   - MS Windows tools fail to run due to incomplete environment and errors
   * Major:
    - client exit with password dialog (MS Windows and MacOS)
    - mmap compatibility fix for older clients
@@ -16,14 +20,17 @@ xpra (5.0.8-1) UNRELEASED; urgency=low
    - proxy instances signal handlers not firing
    - log the prompt with u2f handler
    - handle missing stderr more gracefully
+   - handle missing timeout value more gracefully
    - socket setup error handler logging incorrect, now extra safe
    - socket authentication errors with malformed socket options
    - avoid encryption errors during authentication
    - support arguments with `xpra encoding` subcommand
    - more tolerant option parsing
    - avoid sending a warning notification for missing server log
+   - avoid showing warnings for options from newer versions
+   - missing information from `net_util` tool
 
- -- Antoine Martin <antoine@xpra.org>  Fri, 08 Mar 2024 20:44:49 +0700
+ -- Antoine Martin <antoine@xpra.org>  Sun, 10 Mar 2024 16:46:11 +0700
 
 xpra (5.0.7-1) UNRELEASED; urgency=low
   * Regressions:
