--- a/src/NEWS
+++ b/src/NEWS
@@ -1,4 +1,4 @@
-v3.1.7 (2024-03-08)
+v3.1.7 (2024-03-10)
 	-- major fixes:
 		- windows misplaced on screen, moving unexpectedly
 		- windows wm-state synchronization issue
@@ -17,6 +17,7 @@ v3.1.7 (2024-03-08)
 		- client exit with password dialog (MS Windows and MacOS)
 		- incorrect `mmap` availability check, better forward compatibility
 		- MS Windows system tray initial icon may be lost
+		- MS Windows tools not waiting for user input to close
 		- `xpra top` client failures recording backtraces
 	-- clipboard:
 		- honour client specified order of clipboard preferred targets
@@ -48,6 +49,8 @@ v3.1.7 (2024-03-08)
 		- don't expand environment variables in config files
 		- force include xxhash and brotli libraries in MacOS builds
 		- close log files to avoid warnings on MS Windows
+		- bundle `pynvml` with the full MS Windows builds
+		- force `zeroconf` into the MS Windows bundle
 		- missing console title on MS Windows
 	-- minor:
 		- builtin ssh server connection errors when display is specified
@@ -59,6 +62,7 @@ v3.1.7 (2024-03-08)
 		- proxy instances signal handlers not firing
 		- handle missing stderr more gracefully
 	-- cosmetic:
+		- ignore options from newer config files
 		- notification errors during shutdown
 		- don't query 'linux_distribution' on MacOS or MS Windows
 		- avoid potential mmap checks side-effects
@@ -66,7 +70,7 @@ v3.1.7 (2024-03-08)
 		- Python 3.12 SyntaxWarning
 		- don't try to print a display size we don't have
 		- gst-plugin-scanner packaging for MacOS
-		- deprecation warnings
+		- deprecation warnings, unused imports
 		- consistency: accept more iterables
 
 v3.1.6 (2023-11-27)
