--- a/src/packaging/debian/xpra/changelog
+++ b/src/packaging/debian/xpra/changelog
@@ -17,6 +17,7 @@ xpra (3.1.7-1) UNRELEASED; urgency=low
    - client exit with password dialog (MS Windows and MacOS)
    - incorrect `mmap` availability check, better forward compatibility
    - MS Windows system tray initial icon may be lost
+   - MS Windows tools not waiting for user input to close
    - `xpra top` client failures recording backtraces
   * clipboard:
    - honour client specified order of clipboard preferred targets
@@ -48,6 +49,8 @@ xpra (3.1.7-1) UNRELEASED; urgency=low
    - don't expand environment variables in config files
    - force include xxhash and brotli libraries in MacOS builds
    - close log files to avoid warnings on MS Windows
+   - bundle `pynvml` with the full MS Windows builds
+   - force `zeroconf` into the MS Windows bundle
    - missing console title on MS Windows
   * minor:
    - builtin ssh server connection errors when display is specified
@@ -59,6 +62,7 @@ xpra (3.1.7-1) UNRELEASED; urgency=low
    - proxy instances signal handlers not firing
    - handle missing stderr more gracefully
   * cosmetic:
+   - ignore options from newer config files
    - notification errors during shutdown
    - don't query 'linux_distribution' on MacOS or MS Windows
    - avoid potential mmap checks side-effects
@@ -66,7 +70,7 @@ xpra (3.1.7-1) UNRELEASED; urgency=low
    - Python 3.12 SyntaxWarning
    - don't try to print a display size we don't have
    - gst-plugin-scanner packaging for MacOS
-   - deprecation warnings
+   - deprecation warnings, unused imports
    - consistency: accept more iterables
 
  -- Antoine Martin <antoine@nagafix.co.uk>  Fri, 08 Mar 2024 21:02:25 +0700
