update the release notes

--- a/src/NEWS
+++ b/src/NEWS
@@ -1,4 +1,4 @@
-v3.1.7 (2024-03-10)
+v3.1.7 (2024-03-12)
 	-- major fixes:
 		- windows misplaced on screen, moving unexpectedly
 		- windows wm-state synchronization issue
@@ -32,6 +32,8 @@ v3.1.7 (2024-03-10)
 		- try harder to find an icon to use
 	-- build, packaging and platforms:
 		- MS Windows 'Light' builds
+		- better compatibility with "Windows Kits" locations
+		- remove generated file from VCS
 		- make it easier to build DEBs
 		- pycuda 2020.1 patch for compatibility between RHEL 8 and newer CUDA SDKs
 		- build CUDA kernels with clang
@@ -52,6 +54,7 @@ v3.1.7 (2024-03-10)
 		- bundle `pynvml` with the full MS Windows builds
 		- force `zeroconf` into the MS Windows bundle
 		- missing console title on MS Windows
+		- broken MS Windows EXE tools: missing function, use wrappers to setup environment
 	-- minor:
 		- builtin ssh server connection errors when display is specified
 		- ssh upgrade errors when unavailable
