--- a/src/packaging/debian/xpra/changelog
+++ b/src/packaging/debian/xpra/changelog
@@ -32,6 +32,8 @@ xpra (3.1.7-1) UNRELEASED; urgency=low
    - try harder to find an icon to use
   * build, packaging and platforms:
    - MS Windows 'Light' builds
+   - better compatibility with "Windows Kits" locations
+   - remove generated file from VCS
    - make it easier to build DEBs
    - pycuda 2020.1 patch for compatibility between RHEL 8 and newer CUDA SDKs
    - build CUDA kernels with clang
@@ -52,6 +54,7 @@ xpra (3.1.7-1) UNRELEASED; urgency=low
    - bundle `pynvml` with the full MS Windows builds
    - force `zeroconf` into the MS Windows bundle
    - missing console title on MS Windows
+   - broken MS Windows EXE tools: missing function, use wrappers to setup environment
   * minor:
    - builtin ssh server connection errors when display is specified
    - ssh upgrade errors when unavailable
@@ -73,7 +76,7 @@ xpra (3.1.7-1) UNRELEASED; urgency=low
    - deprecation warnings, unused imports
    - consistency: accept more iterables
 
- -- Antoine Martin <antoine@nagafix.co.uk>  Fri, 08 Mar 2024 21:02:25 +0700
+ -- Antoine Martin <antoine@nagafix.co.uk>  Tue, 12 Mar 2024 20:40:18 +0700
 
 xpra (3.1.6-1) UNRELEASED; urgency=low
   * major fixes:
