update the release notes

--- a/src/NEWS
+++ b/src/NEWS
@@ -1,4 +1,4 @@
-v3.1.7 (2024-03-12)
+v3.1.7 (2024-03-16)
 	-- major fixes:
 		- windows misplaced on screen, moving unexpectedly
 		- windows wm-state synchronization issue
@@ -18,7 +18,11 @@ v3.1.7 (2024-03-12)
 		- incorrect `mmap` availability check, better forward compatibility
 		- MS Windows system tray initial icon may be lost
 		- MS Windows tools not waiting for user input to close
+		- ensure no subprocess will wait for user input
 		- `xpra top` client failures recording backtraces
+		- `xpra top` hanging on start
+		- choose the best colorspace conversion module
+		- faster video YUV to RGB for non-OpenGL rendering
 	-- clipboard:
 		- honour client specified order of clipboard preferred targets
 		- try harder to handle unexpected clipboard data formats
@@ -47,6 +51,7 @@ v3.1.7 (2024-03-12)
 		- Cython 0.29.37.1 / 3.0.9
 		- ffmpeg 6.1.1
 		- libvpx 1.14.0
+		- syntax errors in generated build info file
 		- nvfbc compilation warnings
 		- don't expand environment variables in config files
 		- force include xxhash and brotli libraries in MacOS builds
@@ -62,9 +67,11 @@ v3.1.7 (2024-03-12)
 		- rfb cleanup errors
 		- better rencode compatibility for XSettings
 		- codec self test error handler bug
+		- make it easier to load and test a single codec
 		- proxy instances signal handlers not firing
 		- handle missing stderr more gracefully
 	-- cosmetic:
+		- prevent missing video options from spamming the logs
 		- ignore options from newer config files
 		- notification errors during shutdown
 		- don't query 'linux_distribution' on MacOS or MS Windows
@@ -75,6 +82,7 @@ v3.1.7 (2024-03-12)
 		- gst-plugin-scanner packaging for MacOS
 		- deprecation warnings, unused imports
 		- consistency: accept more iterables
+		- make it possible to silence DPI warning notifications
 
 v3.1.6 (2023-11-27)
 	-- major fixes:
