update the release notes

--- a/src/packaging/debian/xpra/changelog
+++ b/src/packaging/debian/xpra/changelog
@@ -23,6 +23,7 @@ xpra (3.1.7-1) UNRELEASED; urgency=low
    - `xpra top` hanging on start
    - choose the best colorspace conversion module
    - faster video YUV to RGB for non-OpenGL rendering
+   - x11 properties forwarding not handled
   * clipboard:
    - honour client specified order of clipboard preferred targets
    - try harder to handle unexpected clipboard data formats
