update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -6,11 +6,19 @@ xpra (5.0.8-1) UNRELEASED; urgency=low
    - force include all brotli dylibs in MacOS builds
    - spng encoder build switch not honoured
    - Cython 3.0.9
+   - aioquic 1.0.0
    - include `pynvml` in MS Windows full builds
    - force include `zeroconf` in MS Windows builds
    - MS Windows builds not waiting for input to close
    - MS Windows tools fail to run due to incomplete environment and errors
+   - build info cannot be parsed
   * Major:
+   - client chooses the fastest colorspace conversion option
+   - use libyuv to convert video to rgb when rendering without OpenGL
+   - `xpra top` hanging on start
+   - network manager unexpected datatype
+   - disable ssl auto upgrades
+   - freedesktop portal / remotedesktop should not use X11
    - password authentication issues with MS Windows and MacOS client: dialog hangs, client terminates
    - mmap compatibility fix for older clients
    - mmap client token errors should not be fatal
@@ -19,6 +27,7 @@ xpra (5.0.8-1) UNRELEASED; urgency=low
    - `xpra top` client failures recording backtraces
    - never wait for input in a subprocess, or in splash process
   * Minor and cosmetic bugs:
+   - shadow server about dialog
    - proxy instances signal handlers not firing
    - log the prompt with u2f handler
    - handle missing stderr more gracefully
@@ -31,9 +40,13 @@ xpra (5.0.8-1) UNRELEASED; urgency=low
    - avoid sending a warning notification for missing server log
    - avoid showing warnings for options from newer versions
    - missing information from `net_util` tool
-   - only warn once per window when no video options are found, same for csc
+   - only warn once per window when no video options are found, same for csc and when there are no options to choose from
+   - only warn once per window when no video options are found, same for csc and when there are no options to choose from
+   - update discord link
+   - more detailed connection error messages
+   - point to the pyxdg bug information when theme parsing fails
 
- -- Antoine Martin <antoine@xpra.org>  Wed, 13 Mar 2024 20:52:44 +0700
+ -- Antoine Martin <antoine@xpra.org>  Sat, 23 Mar 2024 19:52:50 +0700
 
 xpra (5.0.7-1) UNRELEASED; urgency=low
   * Regressions:
