update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -13,6 +13,7 @@ xpra (5.0.8-1) UNRELEASED; urgency=low
    - MS Windows tools fail to run due to incomplete environment and errors
    - build info cannot be parsed
   * Major:
+   - ensure NV12 streams can be decoded properly
    - client chooses the fastest colorspace conversion option
    - use libyuv to convert video to rgb when rendering without OpenGL
    - `xpra top` hanging on start
@@ -48,8 +49,9 @@ xpra (5.0.8-1) UNRELEASED; urgency=low
    - point to the pyxdg bug information when theme parsing fails
    - typo shown in display information
    - libvpx decoder use correct (unused) pixel format constant
+   - ignore dimensions rounded up in openh264 decoder
 
- -- Antoine Martin <antoine@xpra.org>  Wed, 26 Mar 2024 16:44:25 +0700
+ -- Antoine Martin <antoine@xpra.org>  Thu, 28 Mar 2024 21:06:12 +0700
 
 xpra (5.0.7-1) UNRELEASED; urgency=low
   * Regressions:
