--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (5.0.9-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Sat, 06 Apr 2024 15:12:06 +0700
+
 xpra (5.0.8-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
    - MS Windows 'Light' builds
